# APUE-Prac

./: README.md
IPC/: pipe_prac_15-5.c  race_condition_base_pipe.c
IPC/pager/: CMakeLists.txt  README.md  pager.c  test.txt
IPC/pager/include/: define.h
IPC/semaphore/: README.md  pg-example  pg-example.c  test_static_in_func  test_static_in_func.c
IPC/share_memory/: 15-31.c  15-33.c  README.md
